2006-09-19  Paul J Stevens <paul@nfg.nl>

	* db.c, test-scripts/testsort.imap:
	phase-in TRACE macro
	* dbmail-imapsession.c:
	fix bug #408
	* modules/dbsqlite.c:
	revert to old behaviour
	* db.c:
	dm_malloc to g_new0
	* sql/mysql/2_1_7-2_1_8.mysql:
	update mysql create script for envelope cache (closes #409)

2006-09-16  Aaron Stone  <aaron@serendipity.cx>

	* dbmail-user.h, maintenance.c:
	Minor cleanup of verbosef, qprintf, qerrorf defines.
	* db.h, db.c:
	Added function db_check_sievescript_active_byname.
	* sievecmd.c:
	Better handling when updating/overwriting scripts by using the
	common -y option to control overwrites.

2006-09-15  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c:
	fix bug #408

2006-09-12  Aaron Stone  <aaron@serendipity.cx>

	* pop3.c, db.c:
	Minor formatting changes, deterministic message sort order.
	Removed a superfluous TRACE_FATAL message.
	* pidfile.c, pool.c:
	Chmod the pidfile and statefile to 0644.
	* sort.c:
	Plugged a memory leak. Zapped another FIXME.

2006-09-11  Aaron Stone  <aaron@serendipity.cx>

	* debug.c:
	Return right away if there's no logging to be done.

2006-09-10  Aaron Stone  <aaron@serendipity.cx>

	* imapcommands.c:
	Give parentmboxid an initial value to prevent garbage mailbox ACL
	lookups.

2006-09-10  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c:
	deal with missing envelopes
	* dbmail-imapsession.c:
	newtrace cleanups
	* ChangeLog, modules/dbsqlite.c:
	fix tiny leak in sqlite code
	* dbmail-imapsession.c, imapcommands.c:
	reopen the mailbox for each fetch

2006-09-09  Paul J Stevens <paul@nfg.nl>

	* db.c, db.h, dbmail-imapsession.c, dbmail-imapsession.h, dbmail-message.c, 
	  dbmail-message.h, dm_imaputil.c, dm_imaputil.h, imapcommands.c, 
	  maintenance.c, misc.c, misc.h, sql/mysql/2_1_7-2_1_8.mysql, 
	  sql/postgresql/2_1_7-2_1_8.pgsql, sql/sqlite/2_1_7-2_1_8.sqlite:
	precache ENVELOPE to allow more FETCH speedups
	* serverparent.c, sql/mysql/2_1_7-2_1_8.mysql:
	finish envelope caching
