@@ -11,6 +11,11 @@
 	* sql/mysql/2_1_7-2_1_8.mysql:
 	update mysql create script for envelope cache (closes #409)
 
+2006-09-18  Aaron Stone  <aaron@serendipity.cx>
+
+	* db.c:
+	Don't order POP3 messages by status, only message_idnr.
+
 2006-09-16  Aaron Stone  <aaron@serendipity.cx>
 
 	* dbmail-user.h, maintenance.c:
